# app-cortex

./: Cargo.toml  README.md  config.yaml
resources/: classify.rs  ingest.rs  store.rs
schemas/: schema.graphql
src/: lib.rs
