# Cargo manifest for app-cortex — Phase 48 static-crate shape.
#
# Dual-mode during the dylib → static migration window. yeti-compiler
# reads only [dependencies] when building the dylib (retiring in
# Phase 48 slice 5); cargo uses the full file when building the static
# library this crate compiles to.

[package]
name = "app-cortex"
version = "0.1.0"
edition = "2024"
description = "Persistent memory layer for AI agents. Semantic search, deduplication, classification, and real-time sync."

[lib]
name = "app_cortex"
path = "src/lib.rs"

[workspace]

[dependencies]
yeti-sdk = { path = "../../../Developer/yeti/crates/yeti-sdk", features = ["workspace"] }
serde_json = "1"
